Access-Control-Allow-Originヘッダーを追加
